--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,7 +14,7 @@ margin: auto;
 
 
   color: rgb(19, 30, 44);
-  margin-top: -0.6rem;
+  margin-top: -0.1rem;
  }
 
 
@@ -27,5 +27,10 @@ margin: auto;
 {
   margin-top: 0.8rem;
   margin-right: 0.7rem;
-  
+
 }
+
+.ng-star-inserted{
+  margin-top: 2rem;
+}
+
