--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,6 +49,12 @@
 
     <button mat-menu-item (click)="removeColumn(column)">Remove</button>
 
+    <button mat-menu-item (click)="switchColumnLeft(apresColumn)">Column</button>
+
+    <button mat-menu-item (click)="switchColumnRight(apresColumn)">switch </button>
+
+
+
  </mat-menu>
 
 
