--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,6 +30,25 @@ margin: auto;
 
 }
 
+.material-symbols-outlined-2
+{
+  margin-top: 0.8rem;
+  margin-left: 110rem;
+
+}
+
+.material-symbols-outlined-3
+{
+  display: block;
+
+  margin-left: auto;
+ width: 3.5rem;
+
+    
+    margin-top: -2rem;
+
+}
+
 .ng-star-inserted{
   margin-top: 0.8rem;
 }
