--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,19 +4,12 @@
   margin-left: 4rem;
 }
 
-
-.menuu
- {
-
-display: block;
-
-margin: auto;
-
-
+.menuu {
+  display: block;
+  margin-left: auto;
   color: rgb(19, 30, 44);
-  margin-top: -0.4rem;
+  top: -0.6rem;
  }
-
 
  .material-symbols-outlined-1
 {
@@ -25,34 +18,46 @@ margin: auto;
 
 .material-symbols-outlined
 {
-  margin-top: 0.8rem;
-  margin-right: 0.7rem;
-
+  top: 0.6rem;
+  margin-right: 0.8rem;
 }
 
 .material-symbols-outlined-2
 {
   margin-top: 0.8rem;
   margin-left: 110rem;
-
 }
 
 .material-symbols-outlined-3
 {
   display: block;
+  // margin-left: auto;
+  width: 3.2rem;
+  top: -0.9rem;
+  height: 2.8rem;
+}
+
+.material-symbols-outlined-4
+{
 
   margin-left: auto;
- width: 3.5rem;
-
-    
-    margin-top: -2rem;
-
+  width: 3.2rem;
+  top: -0.5rem;
+  height: 2rem;
+  background-color: rgba(233, 233, 233, 0);
 }
 
 .ng-star-inserted{
   margin-top: 0.8rem;
 }
 
+// .mat-icon {
+//   background-repeat: no-repeat;
+//   display: inline-block;
+//   fill: currentColor;
+//   height: 30px;
+//   width: 20px;
+// }
 
 
 
