--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,37 +3,18 @@
 
 <h1>Kanban Project</h1>
 
-<!-- <div class="iconWithLabel">
-  <ejs-stepper>
-    <e-steps>
-      <e-step label="Cart" iconCss="sf-icon-cart"></e-step>
-      <e-step label="Address" iconCss="sf-icon-user"></e-step>
-      <e-step label="Delivery" iconCss="sf-icon-transport"></e-step>
-      <e-step label="Payment" iconCss="sf-icon-payment"></e-step>
-      <e-step label="Ordered" iconCss="sf-icon-success"></e-step>
-  </e-steps>
-  </ejs-stepper>
-</div> -->
 
 
 
-<form (submit)="submitForm()" #taskForm="ngForm">
-  <label for="Id">Id</label>
-  <input type="text" id="Id" [(ngModel)]="newTask.Id" name="Id" required>
 
-  <label for="Summary">Summary</label>
-  <input type="text" id="Summary" [(ngModel)]="newTask.Summary" name="Summary" required>
 
-  <button type="submit" [disabled]="!taskForm.form.valid">Add New Task</button>
-
-</form>
 <button mat-button (click)="openDialog()">Open Dialog</button>
 <button  mat-flat-button  class="material-symbols-outlined-1"(click)="addColumn()" > <mat-icon>add_box</mat-icon></button>
 
 <button  mat-flat-button  class="material-symbols-outlined-2"(click)="toggleDeleteButtonsVisibility()" > <mat-icon>settings</mat-icon></button>
 
 
-<ejs-kanban #kanbanObj keyField="Status" [dataSource]="data" [cardSettings]="cardSettings" width="auto" height="auto">
+<ejs-kanban #kanbanObj (dialogOpen)="handleActionBegin($event)" keyField="Status" [dataSource]="data" [cardSettings]="cardSettings" width="auto" height="auto">
   <e-columns>
     <!-- <e-column headerText="To do" keyField="Open" allowToggle="true"></e-column>
     <e-column headerText="In Progress" keyField="InProgress" allowToggle="true"></e-column>
