in stepper is done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 
 
 
-<button mat-button (click)="openDialog()">Open Dialog</button>
+<!-- <button mat-button (click)="openDialog()">Open Dialog</button> -->
 <button  mat-flat-button  class="material-symbols-outlined-1"(click)="addColumn()" > <mat-icon>add_box</mat-icon></button>
 
 <button  mat-flat-button  class="material-symbols-outlined-2"(click)="toggleDeleteButtonsVisibility()" > <mat-icon>settings</mat-icon></button>
