--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -40,7 +40,7 @@
       </div>
       <h1 mat-dialog-title class="h">Edit Task</h1>
       <div mat-dialog-content class="dial">
-        <form [formGroup]="firstFormGroup">
+        <!-- <form [formGroup]="firstFormGroup">
           <mat-form-field appearance="fill">
             <mat-label>Status</mat-label>
             <mat-select formControlName="firstCtrl" [(ngModel)]="newTask.Status" (selectionChange)="updateStepIndex()">
@@ -50,7 +50,8 @@
               <mat-option value="Close">Close</mat-option>
             </mat-select>
           </mat-form-field>
-        </form>
+        </form> -->
+
 
 
 
