--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,9 +34,9 @@
  <mat-menu #menu="matMenu">
     <button mat-menu-item (click)="addColumn()">Add</button>
     <button mat-menu-item (click)="modifyColumnTitle(column)">Edit</button>
-    <button mat-menu-item (click)="switchColumn(columns.indexOf(column), columns.indexOf(column) - 1)" [disabled]="columns.indexOf(column) === 0">avant</button>
+    <!-- <button mat-menu-item (click)="switchColumn(columns.indexOf(column), columns.indexOf(column) - 1)" [disabled]="columns.indexOf(column) === 0">avant</button>
     <button mat-menu-item (click)="switchColumn(columns.indexOf(column), columns.indexOf(column) + 1)" [disabled]="columns.indexOf(column) === -1">après</button>
-    <button mat-menu-item (click)="changePositionIndex(column)">Change</button>
+    <button mat-menu-item (click)="changePositionIndex(column)">Change</button> -->
 
  </mat-menu>
 
@@ -58,4 +58,5 @@
 
 
 
-
+<!-- 
+{{columns | json}} -->
