--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -9,7 +9,7 @@
 
       </form> -->
       <div class="iconWithLabel">
-        <mat-horizontal-stepper [linear]="isLinear" #stepper [selectedIndex]="getStepIndex(newTask.Status)">
+        <mat-horizontal-stepper [linear]="isLinear" #stepper (selectionChange)="onStatusChange($event)" [selectedIndex]="getStepIndex(newTask.Status)">
           <mat-step [stepControl]="firstStepForm" id="1">
             <ng-template matStepLabel>
               <mat-icon>check_circle</mat-icon> Todo
