--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,16 @@
 <h1>Kanban Project</h1>
 
 <h1>Kanban Project</h1>
+<!-- <form (submit)="submitForm()" #taskForm="ngForm">
+  <label for="Id">Id</label>
+  <input type="text" id="Id" [(ngModel)]="newTask.Id" name="Id" required>
 
+  <label for="Summary">Summary</label>
+  <input type="text" id="Summary" [(ngModel)]="newTask.Summary" name="Summary" required>
+
+  <button type="submit" [disabled]="!taskForm.form.valid">Add New Task</button>
+
+      </form> -->
 
 
 
@@ -34,9 +43,9 @@
  <mat-menu #menu="matMenu">
     <button mat-menu-item (click)="addColumn()">Add</button>
     <button mat-menu-item (click)="modifyColumnTitle(column)">Edit</button>
-    <!-- <button mat-menu-item (click)="switchColumn(columns.indexOf(column), columns.indexOf(column) - 1)" [disabled]="columns.indexOf(column) === 0">avant</button>
+    <button mat-menu-item (click)="switchColumn(columns.indexOf(column), columns.indexOf(column) - 1)" [disabled]="columns.indexOf(column) === 0">avant</button>
     <button mat-menu-item (click)="switchColumn(columns.indexOf(column), columns.indexOf(column) + 1)" [disabled]="columns.indexOf(column) === -1">après</button>
-    <button mat-menu-item (click)="changePositionIndex(column)">Change</button> -->
+    <button mat-menu-item (click)="changePositionIndex(column)">Change</button>
 
  </mat-menu>
 
@@ -58,5 +67,5 @@
 
 
 
-<!-- 
+<!--
 {{columns | json}} -->
