--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -61,6 +61,27 @@
 
 
 
+.Idd{
+ color: black;
+font-size: 1rem;
+// margin-bottom: 0.9rem;
+height: 1.5rem;
 
+}
+
+
+.summ{
+  color: rgb(90, 89, 89);
+  font-size: 0.9rem;
+  margin-top: 5px;
+  height: 1.5rem;
+}
+
+.de{
+  color: rgb(87, 87, 87);
+  font-size: 0.9rem;
+  margin-left: 22rem;
+ 
+}
 
 
