--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -65,3 +65,6 @@
         <button class="but" mat-button (click)="saveChanges()">Save</button>
         <button mat-button (click)="closeDialog()">Cancel</button>
       </div>
+<ng-template>
+  
+</ng-template>
