--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,7 +66,7 @@
 
                  <p class="de">Task {{duration}}</p>
 
-                {{data.Deadline}}
+                <!-- {{data.Deadline}} -->
             </tr>
           </tbody>
       </table>
