--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -77,11 +77,15 @@ height: 1.5rem;
   height: 1.5rem;
 }
 
-.de{
+.day{
   color: rgb(87, 87, 87);
-  font-size: 0.8rem;
-  margin-left: 14rem;
+  font-size: 0.9rem;
+  margin-left: 22rem;
+  margin-top: 0.1rem;
+  // height: 4rem;
+  // font-size: 1.5rem;
 
 }
+
 
 
