--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -15,7 +15,7 @@
   <mat-horizontal-stepper [linear]="isLinear" #stepper (selectionChange)="onStatusChange($event)" [selectedIndex]="getStepIndex(newTask.Status)">
     <mat-step [stepControl]="firstStepForm" id="1">
       <ng-template  matStepLabel>
-        <mat-icon> list_alt</mat-icon> Todo
+        <mat-icon class="ic">list_alt</mat-icon> Todo
       </ng-template>
       <form #firstStepForm="ngForm">
         <!-- Step 1 content -->
@@ -29,14 +29,14 @@
     </mat-step>
     <mat-step id="3">
       <ng-template matStepLabel>
-        <mat-icon>build</mat-icon> Testing
+        <mat-icon class="ic">build</mat-icon> Testing
       </ng-template>
 
       <!-- Step 3 content -->
     </mat-step>
     <mat-step id="4">
       <ng-template matStepLabel>
-        <mat-icon>done_outline</mat-icon> Done
+        <mat-icon class="ic">done_outline</mat-icon> Done
       </ng-template>
 
       <!-- Step 4 content -->
