--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,12 +19,14 @@
 
 
 <!-- <button mat-button (click)="openDialog()">Open Dialog</button> -->
-<button  mat-flat-button  class="material-symbols-outlined-1"(click)="addColumn()" > <mat-icon>add_box</mat-icon></button>
+<button  mat-flat-button  class="material-symbols-outlined-1"(click)="addColumn()"><mat-icon>add_box</mat-icon></button>
 
-<button  mat-flat-button  class="material-symbols-outlined-2"(click)="toggleDeleteButtonsVisibility()" > <mat-icon>settings</mat-icon></button>
+<!-- <button  mat-flat-button  class="material-symbols-outlined-1"(click)="swimlaneSettings" > <mat-icon>add_box</mat-icon></button> -->
+
+<button  mat-flat-button  class="material-symbols-outlined-2"(click)="toggleDeleteButtonsVisibility()"><mat-icon>settings</mat-icon></button>
 
 
-<ejs-kanban #kanbanObj (dialogOpen)="handleActionBegin($event)" keyField="Status" [dataSource]="data" [cardSettings]="cardSettings" [swimlaneSettings]='swimlaneSettings'  width="auto" height="auto">
+<ejs-kanban #kanbanObj (dialogOpen)="handleActionBegin($event)" keyField="Status" [allowDragAndDrop]="true" [dataSource]="data" [cardSettings]="cardSettings" [swimlaneSettings]='swimlaneSettings'  width="auto" height="auto">
   <e-columns>
     <!-- <e-column headerText="To do" keyField="Open" allowToggle="true"></e-column>
     <e-column headerText="In Progress" keyField="InProgress" allowToggle="true"></e-column>
@@ -47,7 +49,6 @@
     <button mat-menu-item (click)="switchColumn(columns.indexOf(column), columns.indexOf(column) - 1)" [disabled]="columns.indexOf(column) === 0">avant</button>
     <button mat-menu-item (click)="switchColumn(columns.indexOf(column), columns.indexOf(column) + 1)" [disabled]="columns.indexOf(column) === -1">après</button>
     <button mat-menu-item (click)="changePositionIndex(column)">Change</button>
-
  </mat-menu>
 
 </ng-template>
@@ -69,13 +70,11 @@
 
           <p class="day"></p>
               </tr>
-                <!-- {{data.Deadline}} -->
-
-                <!-- <p class="de">{{data.StartDate | date:'medium'}}  {{data.Duration}}</p> -->
-                <!-- <input type="date" [(ngModel)]="data.StartDate" (ngModelChange)="updateTask()" /> -->
-                                <!-- <label>End Date:</label>
-                <input type="date" [(ngModel)]="data.EndDate" (ngModelChange)="updateTask()" /> -->
-
+              <tr class="Salary">
+                
+                <!-- <td>Total Salary in Open status: {{ calculateTotalSalary() | currency: 'EUR' }}</td> -->
+                {{data.Salary | currency: 'EUR' }}
+              </tr>
           </tbody>
       </table>
   </div>
