--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -86,9 +86,13 @@ height: 1.5rem;
   // font-size: 1.5rem;
 
 }
-.Salary{
-  margin-left: 22rem;
+.Sal{
+  margin-left: 12rem;
 }
+
+// .salr{
+//   margin-left: 7rem;
+// }
 
 
 
