--- a/src/app/dialog/dialog.component.scss
+++ b/src/app/dialog/dialog.component.scss
@@ -26,3 +26,26 @@
 .ic{
   color:#3f51b5;
 }
+
+.custom-form {
+  /* Custom form styles */
+}
+
+.custom-form-field {
+  /* Custom form field styles */
+}
+
+.custom-label {
+  /* Custom label styles */
+}
+
+.custom-input {
+  /* Custom input styles */
+  /* Example styles */
+  width: 100%;
+  height: 150px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: none;
+}
