--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -61,10 +61,10 @@
 
 
 
-        <form [formGroup]="secondFormGroup">
-          <mat-form-field appearance="fill">
-            <mat-label>Summary</mat-label>
-            <textarea matInput formControlName="secondCtrl" [(ngModel)]="newTask.Summary"></textarea>
+        <form [formGroup]="secondFormGroup" class="custom-form">
+          <mat-form-field appearance="fill" class="custom-form-field">
+            <mat-label class="custom-label">Summary</mat-label>
+            <textarea matInput formControlName="secondCtrl" [(ngModel)]="newTask.Summary" class="custom-input"></textarea>
           </mat-form-field>
         </form>
       </div>
