--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,8 +24,9 @@
 
 .material-symbols-outlined-2
 {
-  margin-top: 0.8rem;
+  margin-top: -10rem;
   margin-left: 110rem;
+  height: 4rem;
 }
 
 .material-symbols-outlined-3
@@ -87,12 +88,19 @@ height: 1.5rem;
 
 }
 .Sal{
-  margin-left: 12rem;
+  margin-left: 7.5rem;
+  width: 1rem;
+  margin-top: 2rem;
 }
 
 // .salr{
 //   margin-left: 7rem;
 // }
 
+.filter{
 
+  margin-left: 52rem;
+  margin-top: -3rem;
+  height: 1rem;
+}
 
