--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
           <button *ngIf="column.showDeleteButton"  mat-menu-item class="material-symbols-outlined-3" (click)="removeColumn(column)"><mat-icon>cancel</mat-icon></button>
 
  <mat-menu #menu="matMenu">
-    <button mat-menu-item (click)="addColumn()">Add</button>
+    <button mat-menu-item (click)="Dialog()">Add</button>
     <button mat-menu-item (click)="modifyColumnTitle(column)">Edit</button>
     <button mat-menu-item (click)="switchColumn(columns.indexOf(column), columns.indexOf(column) - 1)" [disabled]="columns.indexOf(column) === 0">avant</button>
     <button mat-menu-item (click)="switchColumn(columns.indexOf(column), columns.indexOf(column) + 1)" [disabled]="columns.indexOf(column) === -1">après</button>
