--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -16,8 +16,9 @@
 
 </div>
 
-<div class="date"></div>
+<div class="date">
 <label for="date">
   date
 </label>
 <input id="date" type="datetime-local" formControlName="date">
+</div>
