--- a/src/app/add/add.component.scss
+++ b/src/app/add/add.component.scss
@@ -1,6 +1,8 @@
 .name{
   // margin-left: 12rem;
   text-align: center;
+  margin-bottom: 3rem;
+  margin-top: 2rem;
 }
 
 // .address{
@@ -8,5 +10,5 @@
 // }
 
 .date{
-  
+
 }
