--- a/src/app/add/add.component.scss
+++ b/src/app/add/add.component.scss
@@ -1,13 +1,20 @@
-.name{
-  // margin-left: 12rem;
-  text-align: center;
+.name {
+  display: flex;
+  justify-content: space-around;
   margin-bottom: 3rem;
   margin-top: 2rem;
+  margin-left: 3rem;
 }
 
-// .address{
-//   text-align: center;
-// }
+.input-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.input-group input {
+  margin-top: 0.5rem;
+}
+
 
 .date{
   text-align: center;
@@ -16,4 +23,14 @@
 
 .butt{
   text-align: center;
+}
+
+.input-style {
+  background-color: #ffffff;
+  border: 1px solid #e5e7eb;
+  color: #374151;
+  font-size: 0.875rem;
+  border-radius: 0.5rem;
+  padding: 0.625rem;
+  outline: none;
 }
