--- a/src/app/add/add.component.scss
+++ b/src/app/add/add.component.scss
@@ -1,6 +1,14 @@
 .name {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  margin-bottom: 3rem;
+  margin-top: 2rem;
+  margin-left: 3rem;
+}
+
+.name-2 {
+  display: flex;
+  justify-content: space-evenly;
   margin-bottom: 3rem;
   margin-top: 2rem;
   margin-left: 3rem;
@@ -15,10 +23,19 @@
   margin-top: 0.5rem;
 }
 
+.nam{
+margin-left: 0.7rem;
+margin-bottom: 0.5rem;
+}
+
+.tas{
+  margin-left: 0.7rem;
+  margin-bottom: 0.5rem;
+}
 
 .date{
-  text-align: center;
-  margin-bottom: 3rem;
+  margin-left: 0.7rem;
+  margin-bottom: 0.5rem;
 }
 
 .butt{
