--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="input-group">
     <p class="nam" for="name">Summary</p>
-    <input class="input-style" id="address" type="text"  placeholder="Summary" formControlName="address">
+    <textarea class="input-style" id="address" type="description" rows="4" placeholder="Summary" formControlName="address"></textarea>
   </div>
 </div>
 
@@ -26,5 +26,5 @@
 
 
 <div class="butt">
-  <button mat-flat-button color="primary">Save</button>
+  <button mat-flat-button color="primary" class="save">Save</button>
 </div>
