--- a/src/app/add/add.component.scss
+++ b/src/app/add/add.component.scss
@@ -30,16 +30,21 @@ margin-bottom: 0.5rem;
 
 .tas{
   margin-left: 0.7rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.3rem;
 }
 
 .date{
   margin-left: 0.7rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.3rem;
 }
 
 .butt{
   text-align: center;
+
+}
+
+.save{
+  width: 7rem;
 }
 
 .input-style {
