--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -84,8 +84,6 @@ height: 1.5rem;
   font-size: 0.9rem;
   margin-left: 22rem;
   margin-top: 0.1rem;
-  // height: 4rem;
-  // font-size: 1.5rem;
 
 }
 .Sal{
@@ -94,9 +92,6 @@ height: 1.5rem;
   margin-top: 2rem;
 }
 
-// .salr{
-//   margin-left: 7rem;
-// }
 
 .filter{
 
@@ -106,4 +101,10 @@ height: 1.5rem;
 }
 
 
-
+.e-swimlane{
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 3rem;
+  margin-top: 2rem;
+  margin-left: 3rem;
+}
