--- a/src/app/add/add.component.scss
+++ b/src/app/add/add.component.scss
@@ -3,7 +3,7 @@
   justify-content: space-evenly;
   margin-bottom: 3rem;
   margin-top: 2rem;
-  margin-left: 3rem;
+  margin-left: 1rem;
 }
 
 .name-2 {
@@ -11,7 +11,7 @@
   justify-content: space-evenly;
   margin-bottom: 3rem;
   margin-top: 2rem;
-  margin-left: 3rem;
+  margin-left: 1rem;
 }
 
 .input-group {
@@ -45,6 +45,22 @@ margin-bottom: 0.5rem;
 
 .save{
   width: 7rem;
+  isplay: inline-flex;
+    items-align: center;
+    // padding-left: 1.25rem;
+    // padding-right: 1.25rem;
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
+    margin-top: 1rem;
+    font-size: 0.875rem;
+    font-weight: 700;
+    text-align: center;
+    color: #ffffff;
+    background-color: #2563eb;
+    border-radius: 0.5rem;
+    outline: none;
+    border: none;
+    cursor: pointer;
 }
 
 .input-style {
