--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
 (change)='change($event)' index=0 placeholder='Select a priority' class="filter"></ejs-dropdownlist>
 <button  mat-flat-button  class="material-symbols-outlined-2"(click)="toggleDeleteButtonsVisibility()"><mat-icon>settings</mat-icon></button>
 
-<ejs-kanban #kanbanObj (dialogOpen)="handleActionBegin($event)" (dataBound)="handleDataBound($event)" keyField="Status" [allowDragAndDrop]="true" [dataSource]="data" [cardSettings]="cardSettings"  width="auto" height="auto">
+<ejs-kanban #kanbanObj (dialogOpen)="handleActionBegin($event)" (dataBound)="handleDataBound($event)" keyField="Status" [allowDragAndDrop]="true" [dataSource]="data"  [swimlaneSettings]='swimlaneSettings' [cardSettings]="cardSettings"  width="auto" height="auto">
   <e-columns>
     <!-- <e-column headerText="To do" keyField="Open" allowToggle="true"></e-column>
     <e-column headerText="In Progress" keyField="InProgress" allowToggle="true"></e-column>
@@ -52,8 +52,6 @@
     <button mat-menu-item (click)="switchColumn(columns.indexOf(column), columns.indexOf(column) - 1)" [disabled]="columns.indexOf(column) === 0">avant</button>
     <button mat-menu-item (click)="switchColumn(columns.indexOf(column), columns.indexOf(column) + 1)" [disabled]="columns.indexOf(column) === -1">après</button>
     <button mat-menu-item (click)="changePositionIndex(column)">Change</button>
-
-
  </mat-menu>
 
 </ng-template>
@@ -71,7 +69,7 @@
               </tr>
               <tr>
           <p  class="str">{{data.StartDate | date:'medium'}}  Days : {{daysSinceStart(data.StartDate)}}</p>
-            <!-- <p *ngIf="task.status === 'Active'">Days since start: {{ daysSinceStart(task.StartDate) }}</p> -->
+
           <p class="day"></p>
               </tr>
               <tr class="salr">
